--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
     "router": "^1.3.5",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^4.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
   },
