--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "fastclick": "^1.0.6",
-    "router": "^1.3.5",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
